# sand6py

./: .gitignore  CMakeLists.txt  README.md  bench.rb  gen-pkg.sh  setup.py  summarize_stats.rb  updateCMakeSources.rb
apps/: CMakeLists.txt  GLViewer.cc  GLViewer.hh  d6.cc  d62vtk.cc  d6_analyze.cc  d6_solvePrimal.cc  d6_version.tpl.cc  d6_version.tpl.hh  d6gl.cc  dd6.cc  dd6_solvePrimal.cc
apps/2d/: GLViewer.cc  GLViewer.hh  d6gl.cc  dd6_plot.cc
apps/3d/: GLCamera.hh  GLViewer.cc  GLViewer.hh  d6_analyze.cc  d6gl.cc
python/: CMakeLists.txt  Granular_Collapses_Experimental_Informations.json  command_lines_to_open_HDF5_files.py  d6py.py  run_and_analyse_collapse_example.py
python/d6py/: Tools.py  __init__.py
python/imageProcessing/: Tools_collapses.py  perform_opyf_on_images_OO.py  perform_opyf_on_images_OO_last.py
python/mpmProcessing/: 3D_simulated_runs.py  aspect_ratio_door_2D.py  d6py.py  d6py_collapse_other_aspect_ratio.py  d6py_collapse_other_aspect_ratio_no_granular_bed.py  d6pylib_collapase_full_sand6custom_door.py  d6pylib_collapase_full_sand6custom_door_2D.py  d6pylib_collapase_full_sand6custom_door_3D.py  loop  make-vtk-3D-rendering.py  plot-outputs-OO-3Dand2D-2.py  plot-outputs-OO-3Dand2D.py  tests_for_hyst.py
python/mpmProcessing/plot_figures/: comp_2D_3D.py  comp_2D_3D_aspctR.py  comp_exp_sim_vid.py  comp_exp_sim_vid_hyst.py  default_2_lines_plot.py  door.py  hyteresis_vs _mu_a.py  mu_a_mu_I.py  mu_a_mu_s_mu_I.py  plot_evolution_I.py  plot_evolution_I_video.py  runouts_position.py  template_runout.py  width.py  width_var.py
python/mpmProcessing/test_tex/: 4plots_2d_3d.py  4plots_2d_3d_width.py  double_colonne.py  make_fig_simple.py  make_fig_subplots.py  make_fig_subplots_aligned.py  make_fig_subplots_aligned_fast.py  make_fig_subplots_aligned_fast_B.py  make_fig_subplots_aligned_fast_G.py  make_fig_subplots_last_comp_mu_hyst.py  make_fig_subplots_one_line_door.py  make_fig_subplots_one_line_muI.py  make_fig_subplots_one_line_muI_38_44.py  make_fig_subplots_one_line_mu_hyst_44.py  plot_Hf_AR.py  plot_mu2d_W.py  plot_mu_W.py  plot_mu_W_AR1.py  plot_mu_W_AR2b.py  plot_mu_W_AR_all.py  plot_runout.py  plot_runout_evolution.py  test_savefig.tex
python/src/: d6_python.cpp  d6python2D.cpp  d6python3D.cpp
src/: CMakeLists.txt
src/2d/geo/: BoundaryInfo.cc  FormBuildingBlocks.hh  Grid.cc  Grid.hh  GridShapeFunctions.cc  LevelSet.cc  LevelSet.impl.hh  LevelSet.io.hh  Octree.cc  Tensor.hh  Tet.cc  Tet.hh  TetGrid.cc  UnstructuredShapeFunction.cc  Voxel.cc  Voxel.hh
src/2d/gl/: ShapeRenderer.cc  ShapeRenderer.hh
src/2d/simu/: DefaultScenarios.cc  FormBuilder.cc  RigidBody.cc
src/3d/geo/: BoundaryInfo.cc  FormBuildingBlocks.hh  Grid.cc  Grid.hh  GridShapeFunctions.cc  LevelSet.cc  LevelSet.impl.hh  LevelSet.io.hh  MeshLevelSet.cc  Octree.cc  Tensor.cc  Tensor.hh  Tet.cc  Tet.hh  TetGrid.cc  TetGrid.hh  TriangularMesh.cc  TriangularMesh.hh  UnstructuredShapeFunction.cc  Voxel.cc  Voxel.hh
src/3d/gl/: GrainRenderer.cc  GrainRenderer.hh  MeshRenderer.cc  MeshRenderer.hh  ShapeRenderer.cc  ShapeRenderer.hh
src/3d/simu/: DefaultScenarios.cc  FormBuilder.cc  RigidBody.cc  Scenario.cc
src/3d/visu/: Sampler.cc  Sampler.hh
src/diphasic/: CMakeSources_2d.txt  CMakeSources_3d.txt  DiphasicFriction.cc  DiphasicFriction.hh  DiphasicPrimal.cc  DiphasicPrimal.hh  DiphasicSimu.cc  DiphasicSimu.hh  DiphasicSolver.cc  DiphasicSolver.hh  DiphasicStepData.cc  DiphasicStepData.hh  FluidPhase.cc  FluidPhase.hh
src/geo/: BoundaryInfo.cc  BoundaryInfo.hh  CMakeSources.txt  CMakeSources_2d.txt  CMakeSources_3d.txt  Expr.hh  FieldBase.hh  FieldBase.impl.hh  FieldFuncBase.hh  FieldFuncs.hh  Grid.cc  Grid.hh  GridShapeFunctions.cc  LevelSet.cc  LevelSet.hh  LevelSet.impl.hh  LevelSet.io.hh  MeshBase.cc  MeshBase.hh  MeshCell.hh  MeshImpl.hh  MeshLevelSet.cc  MeshShapeFunction.hh  MeshTraits.hh  Meshes.io.hh  Octree.cc  Octree.hh  Octree.io.hh  P2ShapeFunction.hh  Particles.cc  Particles.hh  Particles.io.hh  ScalarField.cc  ScalarField.hh  ShapeFunctionBase.hh  Tensor.cc  Tensor.hh  TensorField.cc  TensorField.hh  Tet.cc  (+14 more)
src/gl/: CMakeSources.txt  CMakeSources_2d.txt  CMakeSources_3d.txt  GrainRenderer.cc  GrainRenderer.hh  MeshRenderer.cc  MeshRenderer.hh  Shader.cc  Shader.hh  ShapeRenderer.cc  ShapeRenderer.hh  Texture.cc  Texture.hh  VertexBuffer.hh  gImage.cc  gImage.hh  opengl.hh
src/gl/shaders/: ball_depth_fragment.glsl  (+22 more)
src/mono/: CMakeSources_3d.txt  MonoSimu.cc  MonoSimu.hh  Newtonian.cc  Newtonian.hh  Phase.cc  Phase.hh  PhaseFields.hh  PhaseSolver.cc  PhaseSolver.hh  PhaseStepData.cc  PhaseStepData.hh  RigidBodyData.cc  RigidBodyData.hh  StressMassMatrix.cc
src/simu/: ActiveIndices.cc  ActiveIndices.hh  CMakeSources.txt  CMakeSources_2d.txt  CMakeSources_3d.txt  Config.cc  Config.hh  DynParticles.cc  DynParticles.hh  FormBuilder.cc  FormBuilder.hh  FormBuilder.impl.hh  LinearSolver.cc  LinearSolver.hh  Phase.cc  Phase.hh  PhaseFields.hh  PhaseMeshes.cc  PhaseMeshes.hh  PhaseSolver.cc  PhaseSolver.hh  PhaseStepData.cc  PhaseStepData.hh  RigidBody.cc  RigidBody.hh  RigidBodyData.cc  RigidBodyData.hh  Scenario.cc  Scenario.hh  Simu.cc  Simu.hh  StressMassMatrix.cc  StressMassMatrix.hh
src/solve/: CMakeSources.txt  CMakeSources_3d.txt  FrictionSolver.cc  FrictionSolver.hh  LCP.cc  LCP.hh  Primal.cc  Primal.hh  PrimalData.cc  PrimalData.hh
src/utils/: CMakeSources.txt  CMakeSources_2d.txt  CMakeSources_3d.txt  Config.cc  Config.hh  File.cc  File.hh  Log.hh  LogLevels.hh  Mutex.cc  Mutex.hh  Segmenter.hh  Stats.cc  Stats.hh  ThreadLocal.hh  alg.hh  block_mat.hh  endian.hh  scalar.hh  serialization.hh  string.cc  string.hh  units.cc  units.hh
src/visu/: Axes.cc  Axes.hh  CMakeSources.txt  CMakeSources_2d.txt  CMakeSources_3d.txt  Offline.cc  Offline.hh  Sampler.cc  Sampler.hh  VTKFieldWriter.cc  VTKFieldWriter.hh  VTKParticlesWriter.cc  VTKParticlesWriter.hh  VTKWriter.cc  VTKWriter.hh  VertexBuffer.hh
tests/: CMakeLists.txt  CMakeSources.txt  geo.cc  mesh.cc  simu.cc  utils.cc
tests/gtest/: CMakeSources_2d.txt  CMakeSources_3d.txt  geo.cc  utils.cc
(+58 files in other folders)
